--- a/R/O2Import_PyroWorkbench.Rmd
+++ b/R/O2Import_PyroWorkbench.Rmd
@@ -74,7 +74,7 @@ Many issues with raw imported file:
 So, try again, setting 'skip' value to jump over 
 ```{r import dialog paste, retry}
 library(readr)
-X202204061316_PICO_caloxy_SySl1156_445_LL <- read_delim("Optode/SySlCCACaloxy/202204061316_PICO_caloxy_SySl1156_445_LL.txt", 
+X202204061316_PICO_caloxy_SySl1156_445_LL <- read_delim("../Optode/SySlCCACaloxy/202204061316_PICO_caloxy_SySl1156_445_LL.txt", 
     delim = "\t", escape_double = FALSE, 
     trim_ws = TRUE, skip = 13)
 View(X202204061316_PICO_caloxy_SySl1156_445_LL)
@@ -83,13 +83,41 @@ colnames(X202204061316_PICO_caloxy_SySl1156_445_LL)
 ```
 
 Now we have:
--multiple columns with non-syntatical names
 -multiple columns in which all values are 'NA'
 -multiple columns in which all values are '---'
+-multiple columns with non-syntatical names
 
-There is no clear means to solve these problems through 'Import' dialog.
+There is no clear means to solve these problems through the 'Import' dialog.
 
+An Approach:
+-find code to identify and remove columns which are only 'NA' or only '---'
+to simplify our work
+  That may cause problems if different files for later import have different 'empty' columns
+-re-name remaining columns with syntatical variable names
+  That may cause problems if different files for later import have different column names or orders
 
+```{r filter 'is.na'}
+#switch to more convenient name for dataframe and remove columns which are all 'NA'
+OptodeTest <- X202204061316_PICO_caloxy_SySl1156_445_LL %>%
+  select(
+    where(
+      ~!all(is.na(.x)) #remove columns of all na
+    )
+  )
+```
+
+```{r filter columns with only ---}
+#https://stackoverflow.com/questions/41815039/remove-columns-that-contain-a-specific-word
+#remove columns which only contain value '---'
+OptodeTest2 <- OptodeTest %>%
+  select(
+    where(
+      ~!all(str_detect(.x, pattern = "---")) #remove columns containing only all "---"
+    )
+  )
+```
+
+  
 # Set Chunk Options
 ```{r setup, include = FALSE}
 knitr::opts_chunk$set(echo = TRUE, message = FALSE)
@@ -177,7 +205,7 @@ O2DataFiles<-  grep('txt', O2DataFiles, value = TRUE, invert = FALSE)
 O2DataFiles
 ```
 
-Creates function using data.table::fread to skip the beginning comments and starts reading file after key word "Data". Seconf function read_tsv_plus adding file name and skips header rows to start reading file after. Data read.delim_plus or read_delim_plus adds filename and cdate, message=FALSE, warning=FALSE
+Creates function using data.table::fread to skip the beginning comments and starts reading file after key word "Data". Second function read_tsv_plus adding file name and skips header rows to start reading file after. Data read.delim_plus or read_delim_plus adds filename and cdate, message=FALSE, warning=FALSE
 ```{r creating functions to read in data}
 
 #function adds filename and cdate and controls when R starts to read the file, skips header rows
