--- a/R/O2Import_PyroOxyLog_Tutorial.Rmd
+++ b/R/O2Import_PyroOxyLog_Tutorial.Rmd
@@ -90,8 +90,6 @@ View(X202204061316_PICO_caloxy_SySl1156_445_LL)
 
 colnames(X202204061316_PICO_caloxy_SySl1156_445_LL)
 
-library(data.table)
-
 ```
 
 Now we have:
@@ -199,9 +197,9 @@ DataOut <- file.path("..","ImportData", "Optode")
 FileEncode <- "UTF-8" 
 Delimiter <- "\t"
 
-#fixed 'Skip' is brittle; better to start reading all data starting at line that contains 'key'
-Skip <- 13
-Comment <- "#"
+#fixed 'Skip' is brittle and will fail if number of header rows varies across files
+HeaderRows = 13
+#Comment <- "#"
 
 #Set URL for MetaData
 MetaDataURL <- "https://docs.google.com/spreadsheets/d/1ZXpwR7Gfto-uRzVdXzMpQF4frbrvMLH_IyLqonFZRSw/edit#gid=0"
@@ -211,14 +209,15 @@ MetaDataURL <- "https://docs.google.com/spreadsheets/d/1ZXpwR7Gfto-uRzVdXzMpQF4f
 # libraries; Note check actual dependencies
 library(tidyverse)
 library(lubridate)
-#library(stringr)
 library(broom)
+library(googlesheets4)
+library(googledrive)
+
+#library(stringr)
+#library(dplyr)
 #library(knitr)
 #library(zoo)
 #library(tidyquant)
-library(googlesheets4)
-library(googledrive)
-#library(dplyr)
 ```
 
 ```{r set colours}
@@ -239,8 +238,8 @@ This chunk reads in the MetaData catalog from googlesheets
 # 
  MetaCatalog <- read_sheet(MetaDataURL) %>%
 # # sheet is read in by sheet ID, obtained from the URL of the sheet.
-# # read_sheet has an annoying "feature" to set the type of columns it can't parse to a list.
-# # ggplot/dplyr doesn't like working with a dataframe of lists.
+# # read_sheet sets the type of columns it can't parse to a list.
+# # ggplot/dplyr does not work well with a dataframe of lists.
 # # In this case WL is set to a list since some values are numbers, some are strings, some are blank.
 # # To fix this, first drop all rows missing WL, then unlist.
 # # Must first drop NA rows since unlist will collapse NULL lists, then the unlisted WL is a shorter length than original WL column, which mutate doesn't like.
@@ -251,61 +250,63 @@ This chunk reads in the MetaData catalog from googlesheets
  as.data.frame(MetaCatalog)
 ```
 
-listing the names of the oxygen data, classified as DataIn. DataIn = O2Data 
+listing the names of the oxygen data, path stored in variable DataIn.
 ```{r O2Data files}
 
 #recursive = TRUE sets function to go down directory path; recursive = FALSE will only read files at the level of the assigned directory, not in sub-folders
 O2DataFiles <- list.files(path = DataIn, pattern = FileID, full.names = TRUE, recursive = FALSE)
 
 #check file names
-O2DataFiles
+#O2DataFiles
 
-O2DataFiles<-  grep('txt', O2DataFiles, value = TRUE, invert = FALSE)
+O2DataFiles <-  grep('txt', O2DataFiles, value = TRUE, invert = FALSE)
 
 #only retain .txt files
-O2DataFiles
 length(O2DataFiles)
+O2DataFiles
+
 ```
 
-We have a path to a folder that contains `r length(O2DataFiles)` in the .txt format we seek.
+We have a path to a folder that contains `r length(O2DataFiles)` saved in the .txt format we seek.
 This data set is big enough to be worth a bulk import, but small enough to handle.
 
-Create function using data.table::fread to skip the beginning comments and starts reading file after key word "Data". Second function read_tsv_plus adding file name and skips header rows to start reading file after. Data read.delim_plus or read_delim_plus adds filename and cdate, message=FALSE, warning=FALSE
-```{r creating functions to read in data}
+Create function read_tsv_plus adding file name and skips header rows to start reading file after string "Data" read.delim_plus or read_delim_plus adds filename and cdate, message=FALSE, warning=FALSE
 
-#function adds filename and cdate and controls when R starts to read the file, skips header rows
+Alternate function using data.table::fread skips the beginning comments and starts reading file after key word "Data".
+```{r creating functions to read in data}
+#a read function using tidyverse::read_delim that skips a fixed number of header rows, and adds columns to the dataframe containing the filename and the file creation date time.
+ read.delim_plus <- function(flnm, fileencode, delimiter, header){read.delim(file = flnm, fileEncoding = fileencode, sep = delimiter,  skip = header, row.names = NULL) %>%
+     mutate(filename = flnm, cdatetime = ymd_hms(file.info(flnm)$ctime))}
+
+#a read function using data.table::fread that skips header rows up to occurence of a character string, and adds columns to the dataframe containing filename and cdate.
 #fread_plus <- function(Flnm, Skip){data.table::fread(file = Flnm, skip = "Date [A Ch.1 Main]" ) %>% mutate(Filename = Flnm, CDateTime = ymd_hms(file.info(Flnm)$ctime))}
 
 
-#function allows you to read in oxygen data files (Reads in Run14 files)
-read_tsv_plus <- function(Flnm, HeaderRows){read_tsv(Flnm,  col_names = TRUE,  comment = Comment) %>%
-    mutate(filename = Flnm)}
-
-#generates a read function using tidyverse::read_delim
- #read.delim_plus <- function(flnm, FileEncode, Delimiter, HeaderRows){read.delim(flnm, fileEncoding = FileEncode, sep = Delimiter,  skip = HeaderRows, row.names = NULL) %>%
-     #mutate(filename = flnm, cdatetime = ymd_hms(file.info(flnm)$ctime))}
-
-#Adds filename and cdate
-#read_delim_plus <- function(Flnm, Delimiter, HeaderRows, Comment){read_delim(file = Flnm, delim = Delimiter, comment = Comment, skip = HeaderRows) %>%
-     #mutate(Filename = Flnm, CDateTime = ymd_hms(file.info(Flnm)$ctime))}
  
 ```
+"../Optode/SySlCCACaloxy/202204061316_PICO_caloxy_SySl1156_445_LL.txt"
 
-
-Reads in O2Data, and skips the "notes" at the beginning of the data and begins to read after HeaderRows. Renames columns so there are no duplicates (.name_repair)
+Reads in O2Data files one after another; skips the "notes" at the beginning of the data and begins to read each file after HeaderRows. Renames columns so there are no duplicates (.name_repair)
 ```{r read optode data}
 
-#brittle to use column numbers; needs to be changed if using multiple channels
 O2Data <- O2DataFiles %>% 
-  map_df(~read_tsv_plus(Flnm = ., HeaderRows = 19)) %>%
-  select(c(1:4, 12, "Time [Comment]","Comment","filename")) %>%
-  rename(Date = `Date [A Ch.1 Main]`, 
-         AbsTime = `Time [A Ch.1 Main]`,
-         LR_s = `dt (s) [A Ch.1 Main]`,
-         O2_umolL = `Oxygen (\xb5mol/L) [A Ch.1 Main]`, 
-         Temp_C = `Sample Temp. (\xb0C) [A Ch.1 CompT]`,
-         CommentTime = `Time [Comment]`) %>%
-  mutate(CommentTime = hms::new_hms(as.numeric(CommentTime) + (3600 * 12)))
+  purrr::map_df(~read.delim_plus(flnm = ., fileencode = FileEncode, delimiter = Delimiter , header = HeaderRows)) %>%
+   select(
+    where(
+      ~!all(is.na(.x)) #remove columns of all na
+    )
+  ) %>%
+    select(
+    where(
+      ~!all(str_detect(.x, pattern = "---")) #remove columns containing only all "---"
+    )
+  ) %>%
+    select(-c(`(mbar)`, `(%)`,`('C)...15`,`Ch 1...18`,`Ch1...22`,`Ch1...26`)) %>%
+  rename(Time_hms = `Time (HH:MM:SS)`,
+         ETime_s = `Time (s)`,
+         O2_umolL = `Ch1...5`,
+         Temp_C = `Ch 1...9`)
+
 
 O2Data <- O2Data %>%
   mutate(filename = str_remove(string = filename, pattern = ".txt")) %>%
